Fix overflowing table cells at the bottom

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8,5 +8,5 @@ th, td {
     padding: 8px;
 }
 
-tr:nth-child(even){background-color: #f2f2f2}
+// tr:nth-child(even){background-color: #f2f2f2}
 tr:hover {background-color: #4b4b4b}
